[package]
name = "rust_postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.19", features = ["with-time-0_3", "with-chrono-0_4"] }